# MachineLens

./: .flake8  .pre-commit-config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/machinelens/core/: model_interface.py
src/machinelens/explainability/: base_explainer.py  classification_explainer.py  regression_explainer.py
src/machinelens/report/: builder.py
